refactor(sales): corrección de incidencias SonarQube y optimización de lógica de negocio
Se han aplicado mejoras de calidad de código en el módulo 'sales' siguiendo las recomendaciones de SonarQube:

- Reducción de Complejidad Cognitiva (S3776): Se refactorizó 'SaleServiceImpl' extrayendo lógica compleja de creación y actualización de detalles en métodos privados reutilizables.
- Eliminación de Literales Duplicados (S1192): Centralización de mensajes de error de excepciones en constantes estáticas para mejorar la mantenibilidad.
- Modernización de Streams (S6204): Sustitución de 'collect(Collectors.toList())' por '.toList()' en mappers y servicios para aprovechar las mejoras de Java 16+.
- Documentación de Constructores (S1186): Inclusión de comentarios explicativos en constructores vacíos de entidades JPA.
- Estabilidad: Se mantuvo la integridad de los módulos externos y se aseguró la compatibilidad para el arranque correcto de la aplicación.